test cases completed for projectService, taskService and userService